# keylogger

./: Cargo.toml  README.md
.github/workflows/: test.yaml
examples/: beep.rs  print_to_stdout.rs
src/: device.rs  error.rs  key_code.rs  keyboard.rs  keylogger.rs  keys.rs  lib.rs
src/keyboard/: device.rs  event_codes.rs
