[package]
name = "keylogger"
version = "0.1.0"
edition = "2021"
description = "Capture and handle keystroke events"
keywords = ["keylogger", "linux"]

[dependencies]
async-trait = "0.1.58"
chrono = "0.4.22"
futures = "0.3.25"
libc = "0.2.135"
thiserror = "1.0.37"
tokio = { version = "1.21.2", default-features = false, features = ["rt", "macros", "rt-multi-thread", "net", "time"] }

[dev-dependencies]
cpal = { version = "0.14.1", features = ["jack"] }
